--- a/thesis/01_introduction/02_postgresql.tex
+++ b/thesis/01_introduction/02_postgresql.tex
@@ -10,7 +10,7 @@ PostgreSQL internally uses parse trees to process SQL Queries. The whole parsing
 
 \begin{figure}[h]
   \makebox[\textwidth]{\includegraphics[width=\textwidth]{parse_tree.jpg}}
-  \caption {Visualisation of parse tree for \texttt{"SELECT * FROM users WHERE name = 'Captain Nemo' ORDER BY id ASC LIMIT 1"}}
+  \caption {Visualisation of parse tree for \texttt{"SELECT * FROM users WHERE name = 'Captain Nemo' ORDER BY id ASC LIMIT 1"}\cite{Parse tree image}}
 \end{figure}
 
 During the \textit{Parse stage}, the parser checks the syntax of a query string. It does not do any lookups in the system catalogs, and for that reason, it is independent of the database schema. In the following chapters you will see how our library seamlessly exposes the internal Postgres parse trees to the higher level language and how this can be used to validate queries during compilation.
