--- a/thesis/03_implementation/04_parsing_json.tex
+++ b/thesis/03_implementation/04_parsing_json.tex
@@ -1,22 +1,47 @@
 \section{Parsing JSON result from libpg\_query}
-There are few different libraries that can help with parsing JSONs. From those I decided to use \textit{circe}. Circe is fork of a pure functional library called Argonaut. It is great for parsing, traversing JSON, but the main functionality I use is autoderivation of \texttt{Encoder} and \texttt{Decoder} instances for a given algebraic data type. 
+There are few different libraries that can help with parsing JSON. From those, we are using \textit{circe}. \textit{Circe} is fork of a pure functional library called \textit{Argonaut}. It is great for parsing, traversing JSON, but the main functionality we are using is the auto derivation of \texttt{Encoder} and \texttt{Decoder} instances for a given algebraic data type. 
 
-For each case class that represents one node of the parse tree, we have to generate \texttt{Encoder} and \texttt{Decoder} instances.
+\subsection{How decoding works in \textit{circe}}
+Basic decoder for case class in \textit{circe} iterates over all parameters of the case class and matches the name of the paramater with the key in JSON. Then it attempts to parse the value as the type of the parameter. Let's say we have case class representing person together with implicit definitions of \texttt{Decoder}.
+\begin{lstlisting}[language=scala, basicstyle=\ttfamily, showstringspaces=false]
+@JsonCodec case class Person(age: Int, 
+                             name: Option[String])
+\end{lstlisting}
+The \texttt{@JsonCodec} annotation simplifies the process of generating the \texttt{Decoder} and \texttt{Encoder} using semi-automatic derivation. \cite{Semi automatic derivation} \\
+Next we have simple JSON, that we want to parse as \texttt{Person} object.
+\begin{lstlisting}[basicstyle=\ttfamily, showstringspaces=false]
+val jsonString: String = "{ "age" : 5 }"
+parse(jsonString).as[Person]
+\end{lstlisting}
+First the \texttt{jsonString} is converted to \texttt{Json} - \texttt{circe}-specific representation of JSON. Decoding starts with the \texttt{age} parameter and successfully finds the key in JSON. Then it type checks the value, if it is \texttt{Int}, or if it can be converted to \texttt{Int} using any implicit conversion. Then it continues with the \texttt{name} parameter. The JSON doesn't contain key \texttt{name}, but the type of name is \texttt{Option[String]}, which represents nullable type. The decoder then sets \texttt{Name} as \texttt{None} and the decoding is finished. \texttt{Circe} then returns \texttt{Right(Person(5, None))}.
+\newpage
+However, if the \texttt{name} was \texttt{String} instead, the decoding would stop and return: 
+\begin{lstlisting}[language=scala, basicstyle=\ttfamily, showstringspaces=false]
+Left(
+    DecodingFailure(
+        Attempt to decode value on failed cursor,
+        List(DownField(name))
+        )
+    )
+\end{lstlisting}
 
-\subsection{JSON structure}
-Each node is in the JSON defined as key-value pair. Key is always the name of the node and value is dictionary where keys are names of the parameters with their corresponding values. 
+\subsection{Query parsing}
+Parsing of the SQL queries is covered by \texttt{PgQueryParser} object. The main \texttt{parse} function takes SQL query as a plain string on input. The query is parsed using \texttt{libpg\_query}. The string representing JSON is then converted to \texttt{circe Json} type and parsed. The result is then decided based on pattern matching of the output of \texttt{circe}. 
 
-\subsection{How decoding works}
-Basic decoder for specific case class in \textit{circe} works as follows. JSON is parsed as key-value pairs and it attempts to map each parameter in case class to corresponding key from JSON. Return value from parsing is \texttt{Decoder.Result[T]}, which translates to \texttt{Either[DecodingFailure, T]}. As the name suggests, you get either \texttt{Left(DecodingFailure)} in case any invalid operation happens during the parsing, or \texttt{Right(T)}, where \texttt{T} is the required object that is supposed to be parsed. 
-
-If the key is not found in the case class parameter list, it either sets the parameter to \texttt{None} (if the parameter is of \texttt{Option[T]} type), or returns \texttt{DecodingFailure}. If the value we are trying to further parse is not one of the built-in types, we have to implement Decoder for it. That means each of our case classes is required to have implementation of Decoder for everything to work smoothly.
-
-Input for parsing is always plain string representation of the query. \texttt{Libpg\_query} is then used to get the JSON representation of parse tree. Then I parse the JSON using \textit{circe} Decoder as Node type, which is an abstract class for all possible Nodes representing nodes of the SQL parse tree. In Node apply method correct Node subtype is chosen and Decoder for that subtype is used. Following the approach \textit{circe} uses, the parsing returns \texttt{Either[PgQueryError, Node]}.
+To keep code consistent, we are following the approach \textit{circe} uses. The parsing method then returns \texttt{Either[PgQueryError, Node]}.
+\begin{itemize}
+    \item When everything goes well, we get the \texttt{Node} and return it as \\ \texttt{Right(node)}.
+    \item If the result is an empty array, it suggests that the query was not valid and \texttt{libpg\_query} returned JSON with empty array. \\
+    \texttt{Left(EmptyParsingResult)}
+    \item If the parsing of the JSON fails, we get \texttt{DecodingFailure} object from \texttt{circe}. Return value is then \\ \texttt{Left(FailureWhileParsing(DecodingFailure))}
+\end{itemize}
 
 \subsection{Parse expressions}
-For parsing expressions, I use similar approach. The difference is that before the expression is sent to \texttt{libpg\_query}, the prefix "SELECT " is added. That way valid query should be created (if expression is valid) and following that the process is the same as for query. However, when we receive Node result, we have to get the expression only. That is done using pattern matching, since we expect \texttt{SelectStmt} node and we know its structure. Extracted expression is then returned as result.
+Besides parsing full queries, we also support the parsing of expressions. Having access to parse trees of expression will be useful for the interpolation of queries. Just like \texttt{parse} method used for parsing queries, the \texttt{parseExpression)} takes expression as string on input. However, \texttt{libpg\_query} only supports parsing of full valid queries. For that reason, we are using a small trick, where we add the prefix "SELECT " in front of the expression. This works, because by definition, \texttt{targetList} of \texttt{SelectStmt} can contain arbitrary expression.
+
+The created query is then parsed using the original \texttt{parse} method. Since the structure of the \texttt{SelectStmt} node is known, we can use pattern matching to extract precisely only the expression. The error handling works in similar fashion as in the \texttt{parse} function and the return type is \texttt{Either[PgQueryError, ResTarget]}.
 
 \subsection{Prettify}
-Prettify goes one step beyond the parsing of the query. In case the parse tree is built succesfully, it uses \texttt{Node.query} method. Depending on the structure of each Node, the query method is implemented to recursively build the whole parse tree back to SQL query in the string form.
+Prettify goes one step beyond the parsing of the query. In case the parse tree is built successfully, it uses \texttt{Node.query} method. Depending on the structure of each Node, the query method is implemented to recursively build the whole parse tree back to the SQL query in the string form.
 
 
